--- a/src/styles.css
+++ b/src/styles.css
@@ -1,8 +1,9 @@
-@import url('https://fonts.googleapis.com/css2?family=Dancing+Script:wght@400..700&family=La+Belle+Aurore&family=Outfit:wght@100..900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Dancing+Script:wght@400..700&family=La+Belle+Aurore&family=Outfit:wght@100..900&family=Bad+Script&display=swap');
 @import "tailwindcss";
 
 @theme {
   --font-belle-aurore: "La Belle Aurore", cursive;
   --font-outfit: "Outfit", sans-serif;
   --font-dancing: "Dancing Script", cursive;
+  --font-p: "Bad Script", cursive;
 }
